--- a/app/globals.css
+++ b/app/globals.css
@@ -2,24 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
-
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -48,6 +30,7 @@ body {
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
   }
+
   .dark {
     --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
@@ -74,21 +57,21 @@ body {
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
   }
-  /* выделение дат с вебинарами */
-  .react-calendar__tile.highlight-date {
-    background: #2563eb; /* Tailwind: bg-blue-600 */
-    color: white;
-    font-weight: bold;
-    border-radius: 0.5rem;
-  }
-  
-}
 
-@layer base {
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
+  /* выделение дат с вебинарами */
+  .react-calendar__tile.highlight-date {
+    background: #2563eb;
+    color: white;
+    font-weight: bold;
+    border-radius: 0.5rem;
   }
 }
